[package]
name = "pntools"
version = "1.0.2"
description = "PNTools"
authors = ["npv2k1"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.21.0"
tauri-plugin-websocket = "2"
sha2 = "0.10.8"
lazy_static = "1.5.0"
base64 = "0.22.1"
dirs = "5.0"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
# Diesel dependencies


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
